# Telegram-bot

./: .cloudbuild.yaml  .dockerignore  .env.example  .env.local.example  .env.prod.example  .gitignore  .yc_assistant_id  .yc_search_index_id  BACKLOG.md  BOT_IS_RUNNING.md  CODEX_CLI_SETUP.md  CODex_CLI_NOTES.md  DB_CONNECTION_ISSUE.md  DEPLOY_GUIDE.md  Dockerfile  GEMINI_START.md  INFRASTRUCTURE_IMPROVEMENT_PROPOSAL.md  LAUNCH_CHECKLIST.md  NEXT_STEPS.md  PROCESS_IMPROVEMENT_PLAN.md  PROJECT_DOCS.md  README.md  RESTORE_DB_INSTRUCTIONS.md  ROADMAP.md  SBERCLOUD_MIGRATION_PLAN.md  SPRINT_REVIEW_AND_RETROSPECTIVE.md  TEST_RESULTS.md  Yandex_AUTOMATION.md  Yandex_DEVOPS.md  Yandex_SECRETS.md  admin_service.py  analytics.py  app.py  assistant_client.py  check_bot.py  check_db_content.py  check_env.py  check_kb_data.py  config.py  create_assistant.py  (+29 more)
docs/: README.md
guides/: desktop.ini
handlers/: __init__.py  admin.py  common.py  feedback.py  kb.py  llm_commands.py
middlewares/: subscription.py
migrations/: 001_create_feedback_table.sql
roles/: 10_ux_product_designer.md  11_content_seo_lead.md  12_frontend_engineer.md  13_backend_engineer.md  14_quality_lead.md  15_analytics_lead.md  16_martech_automation.md  17_devops_engineer.md  18_accessibility_specialist.md  19_security_privacy.md  1_ideas_polisher.md  20_localization_manager.md  21_ideas_polisher.md  22_architect.md  23_system_analyst.md  24_project_manager.md  2_architector.md  3_system_analytic.md  4_project_manager.md  5_full_stack_developer.md  6_scrum_master.md  7_senior_code_reviewer.md  (+2 more)
(+72 files in other folders)
