[project]
name = "telegram-ai-bot"
version = "0.1.0"
description = "Telegram AI Bot"
authors = [
    {name = "Your Name",email = "your.email@example.com"}
]
readme = "README.md"
[tool.poetry.dependencies]
python = ">=3.11,<3.12"
aiogram = ">=3.22.0,<4.0.0"
asyncpg = ">=0.30.0,<0.31.0"
python-dotenv = ">=1.2.1,<2.0.0"
langchain = { version = ">=1.0.7,<2.0.0", python = ">=3.13,<4.0.0" }
pgvector = ">=0.4.1,<0.5.0"
langchain-core = { version = ">=1.0.5,<2.0.0", python = ">=3.13,<4.0.0" }
psycopg2-binary = ">=2.9.11,<3.0.0"
langchain-community = { version = ">=0.4.1,<0.5.0", python = ">=3.13,<4.0.0" }
langchain-text-splitters = { version = ">=1.0.0,<2.0.0", python = ">=3.13,<4.0.0" }
pypdf = ">=6.2.0,<7.0.0"
cryptography = ">=46.0.3,<47.0.0"
httpx = ">=0.28.1,<0.29.0"
yandex-cloud-ml-sdk = ">=0.17.1,<0.18.0"
get-annotations = { version = "0.1.2", python = ">=3.13,<4.0.0" }
boto3 = ">=1.40.74,<2.0.0"
pytest = ">=9.0.1,<10.0.0"
pytest-asyncio = ">=1.3.0,<2.0.0"
langgraph = ">=1.0.3,<2.0.0"
yandexcloud = ">=0.367.0,<0.368.0"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
